--- a/application.properties
+++ b/application.properties
@@ -17,6 +17,6 @@ ribbon.ConnectTimeout=10000
 ribbon.ReadTimeout=20000
 ribbonName=ribbon-client
 #server
-serverName=server
+serverName=config
 serverPort=19003
 url=http://${ribbonName}/simple/
